--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Backend for FWJB built in Node w/ Express.js",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
