--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "SET NODE_ENV=test& jest --forceExit --detectOpenHandles  --watchAll --maxWorkers=1"
+    "test": "NODE_ENV=test& jest --forceExit --detectOpenHandles  --watchAll --maxWorkers=1"
   },
   "repository": {
     "type": "git",
