--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "NODE_ENV=test& jest --forceExit --detectOpenHandles  --watchAll --maxWorkers=1"
+    "mactest": "NODE_ENV=test& jest --forceExit --detectOpenHandles  --watchAll --maxWorkers=1",
+    "wintest": "SET NODE_ENV=test& jest --forceExit --detectOpenHandles  --watchAll --maxWorkers=1"
   },
   "repository": {
     "type": "git",
