--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,44 @@
 version: '3'
 services:
   api:
-    image: fwjb-api
-    build: .
+    image: mistermur/fwjb-api
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
     networks:
-      - backend
+      - webappnetwork
     ports:
       - "8080:8080"
+    depends_on:
+      - mongodb
     volumes:
     - ./:/usr/src/app
-
-  web-cli:
-    image: fwjb-api
+  fwjb:
+    image: mistermur/fwjb-frontend
+    links:
+      - api
+    ports:
+        - "3000:3000"
+    volumes:
+        - /app/node_modules
+        - .:/app
+    stdin_open: true
+    environment:
+        - CHOKIDAR_USEPOLLING=true
     networks:
-      - backend
-    command: sh
+      - webappnetwork
+  mongodb:
+    image: mongo
+    restart: always
+    container_name: mongodb
+    volumes:
+        - ./data-node:/data/db
+    ports:
+        - 27017:27017
+    command: mongod
+    networks:
+        - webappnetwork
 
 networks:
-  backend:
+  webappnetwork:
     driver: bridge
