--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "homepage": "https://github.com/Beaulieu527/fwjbBackend#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
+    "cors": "*",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
@@ -36,6 +36,7 @@
   "devDependencies": {
     "cross-env": "^7.0.2",
     "jest": "^26.4.2",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "cors":"*"
   }
 }
